# Proyecto_II_DII_Lets_Play-

./: .gitignore  CMakeLists.txt  conanfile.txt
Doxygen/html/: _backtracking_8h.html  _backtracking_8h_source.html  _bp_server_8h.html  _bp_server_8h_source.html  _bp_window_8h.html  _bp_window_8h_source.html  _collision_8h_source.html  _fila_8h.html  _fila_8h_source.html  _generation_8h.html  _generation_8h_source.html  _individuo_8h.html  _individuo_8h_source.html  _input_box_8h.html  _input_box_8h_source.html  _line_8h.html  _line_8h_source.html  _p_z_8h.html  _p_z_8h_source.html  _puzzle_window_8h.html  _puzzle_window_8h_source.html  _scroll_8h_source.html  _socket___client_8h.html  _socket___client_8h_source.html  _socket___server_8h.html  _socket___server_8h_source.html  annotated.html  bp_game_mode_8h.html  bp_game_mode_8h_source.html  class_backtracking-members.html  class_backtracking.html  class_bp_server-members.html  class_bp_server.html  class_bp_window-members.html  class_bp_window.html  class_collision_1_1_bitmask_manager-members.html  class_collision_1_1_bitmask_manager.html  class_collision_1_1_oriented_bounding_box-members.html  class_collision_1_1_oriented_bounding_box.html  class_fila-members.html  (+47 more)
Doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  (+13 more)
New Doxy/html/: _backtracking_8h.html  _backtracking_8h__incl.map  _backtracking_8h__incl.md5  _backtracking_8h_source.html  _bp_server_8h.html  _bp_server_8h__incl.map  _bp_server_8h__incl.md5  _bp_server_8h_source.html  _bp_window_8h_source.html  _collision_8h_source.html  _fila_8h.html  _fila_8h__dep__incl.map  _fila_8h__dep__incl.md5  _fila_8h_source.html  _generation_8h.html  _generation_8h__dep__incl.map  _generation_8h__dep__incl.md5  _generation_8h__incl.map  _generation_8h__incl.md5  _generation_8h_source.html  _individuo_8h.html  _individuo_8h__dep__incl.map  _individuo_8h__dep__incl.md5  _individuo_8h__incl.map  _individuo_8h__incl.md5  _individuo_8h_source.html  _input_box_8h.html  _input_box_8h__incl.map  _input_box_8h__incl.md5  _input_box_8h_source.html  _line_8h.html  _line_8h__dep__incl.map  _line_8h__dep__incl.md5  _line_8h__incl.map  _line_8h__incl.md5  _line_8h_source.html  _p_z_8h.html  _p_z_8h__incl.map  _p_z_8h__incl.md5  _p_z_8h_source.html  (+211 more)
New Doxy/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+40 more)
Wiki/: Diagrama sin título.drawio  diagramaClases.drawio
src/cpp/: Socket.cpp  Socket.h  Socket_Client.cpp  Socket_Client.h  main.cpp
src/images/: blockers.png-autosave.kra  sprball.png~  sprfield.jpg~
(+49 files in other folders)
